2009-03-20 [iwkse]	0.9.6cvs10

	* README
		Update the info link

2009-03-20 [iwkse]	0.9.6cvs9

	* src/fancy_viewer.c
		Clean the viewer before loading
		a new message

2009-03-18 [iwkse]	0.9.6cvs8

	* README
		Update info

2009-03-18 [iwkse]	0.9.6cvs7

	* README
		Update info in the file

2009-03-17 [iwkse]	0.9.6cvs6

	* src/fancy_viewer.c
		fix description of the plugin

2009-03-17 [iwkse]	0.9.6cvs5

	* configure.ac
		switch svn to cvs prefix

2009-03-17 [iwkse]	0.9.6cvs4

	* configure.ac
		svn to cvs prefix

2009-03-17 [iwkse]	0.9.6cvs3

	* configure.ac
		Switch svn to cvs prefix
