@@ -6,3 +6,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 README;  ) > 0.9.6cvs8.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/fancy_viewer.c;  ) > 0.9.6cvs9.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 README;  ) > 0.9.6cvs10.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/fancy_viewer.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/fancy_viewer.h;  ) > 0.9.6cvs11.patchset
